--- a/src/Vts.MonteCarlo.ZemaxDatabaseConverter/Vts.MonteCarlo.ZemaxDatabaseConverter.csproj
+++ b/src/Vts.MonteCarlo.ZemaxDatabaseConverter/Vts.MonteCarlo.ZemaxDatabaseConverter.csproj
@@ -4,14 +4,14 @@
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net5.0</TargetFramework>
 		<RootNamespace>Vts.MonteCarlo.ZemaxDatabaseConverter</RootNamespace>
-		<AssemblyName>mc_post</AssemblyName>
+		<AssemblyName>mc_zemax</AssemblyName>
 		<RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
 		<AssemblyVersion>6.2.0.0</AssemblyVersion>
 		<FileVersion>6.2.0.0</FileVersion>
 		<Authors>David Cuccia; Carole Hayakawa; Lisa Malenfant; Janaka Ranasinghesagara; Jennifer Nguyen; Adam Gardner; Michele Martinelli</Authors>
 		<Company>Virtual Photonics Technology Initiative</Company>
-		<Product>MCPP</Product>
-		<Description>Monte-Carlo post-processor command-line application</Description>
+		<Product>MCZemax</Product>
+		<Description>Monte-Carlo Zemax-MCCL database converter command-line application</Description>
 		<Copyright>Copyright © 2022 Laser Microbeam and Medical Program</Copyright>
 		<PackageProjectUrl>https://github.com/VirtualPhotonics/VTS/wiki</PackageProjectUrl>
 		<PackageLicenseUrl>https://github.com/VirtualPhotonics/VTS/blob/master/license.md</PackageLicenseUrl>
