--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -8,6 +8,11 @@
     <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="MonteCarlo\Zemax\**" />
+    <EmbeddedResource Remove="MonteCarlo\Zemax\**" />
+    <None Remove="MonteCarlo\Zemax\**" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="Resources\embeddedresourcefile.txt" />
     <None Remove="Resources\fileiotest\binarydbl" />
     <None Remove="Resources\fileiotest\file7.xml" />
@@ -59,8 +64,5 @@
     <None Update="NLogUnitTest.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MonteCarlo\Zemax\" />
   </ItemGroup>
 </Project>
