--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
   <PropertyGroup>
 	<TargetFramework Condition=" '$(OS)' != 'Windows_NT' ">netstandard2.1</TargetFramework>
-	<TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">netstandard2.1;net48</TargetFrameworks>
+	<TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">net6.0;netstandard2.1;net48</TargetFrameworks>
     <Description>The VTS (Virtual Tissue Simulator) is an open source library for .NET that was designed as a modular and scalable platform to provide an integrated suite of computational tools to define, solve, visualize, and analyze relevant forward and inverse radiative transport problems in Biomedical Optics.</Description>
     <Company>Virtual Photonics Technology Initiative</Company>
     <Copyright>Copyright © 2022 Laser Microbeam and Medical Program</Copyright>
@@ -131,7 +131,7 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="NLog" Version="5.0.0" />
+    <PackageReference Include="NLog" Version="5.0.2" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
     <PackageReference Include="System.Reflection" Version="4.3.0" />
   </ItemGroup>
