--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
   <PropertyGroup>
-	<TargetFramework Condition=" '$(OS)' != 'Windows_NT' ">net6.0;netstandard2.1</TargetFramework>
+	<TargetFrameworks Condition=" '$(OS)' != 'Windows_NT' ">net6.0;netstandard2.1</TargetFrameworks>
 	<TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">net6.0;netstandard2.1;net48</TargetFrameworks>
     <Description>The VTS (Virtual Tissue Simulator) is an open source library for .NET that was designed as a modular and scalable platform to provide an integrated suite of computational tools to define, solve, visualize, and analyze relevant forward and inverse radiative transport problems in Biomedical Optics.</Description>
     <Company>Virtual Photonics Technology Initiative</Company>
