All folders back with correct files and all building currently.

--- a/src/Vts.MonteCarlo.ZemaxDatabaseConverter/Vts.MonteCarlo.ZemaxDatabaseConverter.csproj
+++ b/src/Vts.MonteCarlo.ZemaxDatabaseConverter/Vts.MonteCarlo.ZemaxDatabaseConverter.csproj
@@ -24,7 +24,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Zemax\Vts.Zemax.csproj" />
+	  <ProjectReference Include="..\Vts.Zemax\Vts.Zemax.csproj" />
 	</ItemGroup>
 
 </Project>
