--- a/src/Vts.Zemax.Test/Vts.Zemax.Test.csproj
+++ b/src/Vts.Zemax.Test/Vts.Zemax.Test.csproj
@@ -6,9 +6,6 @@
 	  <UpgradeBackupLocation>C:\Users\hayakawa\Documents\Visual Studio 2022\Projects\vts_220810\src\Backup\Vts.Zemax.Test\</UpgradeBackupLocation>
 	  <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="ZrdRayDatabaseTest.cs" />
-  </ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
 		<PackageReference Include="Moq" Version="4.18.1" />
@@ -18,10 +15,9 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Vts\Vts.csproj" />
-    <ProjectReference Include="..\Zemax\Vts.Zemax.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Vts.Zemax\Vts.Zemax.csproj" />
+	</ItemGroup>
 	<ItemGroup>
 		<None Update="NLogUnitTest.config">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
