Added example infile in SimulationInputProvider to specify generation of RayDiffuseReflectanceDatabase, so added file to cleanup of MCCL and MCPP unit tests.  Still one unit test passes alone but not in series.

--- a/src/Vts.MonteCarlo.ZemaxDatabaseConverter.Test/Vts.MonteCarlo.ZemaxDatabaseConverter.Test.csproj
+++ b/src/Vts.MonteCarlo.ZemaxDatabaseConverter.Test/Vts.MonteCarlo.ZemaxDatabaseConverter.Test.csproj
@@ -16,7 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Vts.MonteCarlo.CommandLineApplication\Vts.MonteCarlo.CommandLineApplication.csproj" />
     <ProjectReference Include="..\Vts.MonteCarlo.ZemaxDatabaseConverter\Vts.MonteCarlo.ZemaxDatabaseConverter.csproj" />
+    <ProjectReference Include="..\Vts\Vts.csproj" />
   </ItemGroup>
 
 </Project>
