Updates csproj files for Vts.Zemax, Vts.MonteCarlo.ZemaxDatabaseConverter, Vts.Zemax.Test and Vts.MonteCarlo.ZemaxDatabaseConverter.Test. Vts.Zemax.Test still has Microsoft.NETCore.App listed under Framework dependencies.  Not sure how to get rid of it.  Vts.MonteCarlo.ZemaxDatabaseConverter.Tests 2 out of 3 still failing, otherwise all passing.

--- a/src/Vts.MonteCarlo.ZemaxDatabaseConverter.Test/Vts.MonteCarlo.ZemaxDatabaseConverter.Test.csproj
+++ b/src/Vts.MonteCarlo.ZemaxDatabaseConverter.Test/Vts.MonteCarlo.ZemaxDatabaseConverter.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\Vts.MonteCarlo.CommandLineApplication\Vts.MonteCarlo.CommandLineApplication.csproj" />
     <ProjectReference Include="..\Vts.MonteCarlo.ZemaxDatabaseConverter\Vts.MonteCarlo.ZemaxDatabaseConverter.csproj" />
     <ProjectReference Include="..\Vts\Vts.csproj" />
+	<ProjectReference Include="..\Vts.Zemax\Vts.Zemax.csproj" />
   </ItemGroup>
 
 </Project>
