--- a/src/Vts.MonteCarlo.ZemaxDatabaseConverter/Vts.MonteCarlo.ZemaxDatabaseConverter.csproj
+++ b/src/Vts.MonteCarlo.ZemaxDatabaseConverter/Vts.MonteCarlo.ZemaxDatabaseConverter.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+	
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<RootNamespace>Vts.MonteCarlo.ZemaxDatabaseConverter</RootNamespace>
 		<AssemblyName>mc_zemax</AssemblyName>
 		<RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
-		<AssemblyVersion>6.2.0.0</AssemblyVersion>
+		<AssemblyVersion>7.0.0.0</AssemblyVersion>
 		<FileVersion>6.2.0.0</FileVersion>
 		<Authors>David Cuccia; Carole Hayakawa; Lisa Malenfant; Janaka Ranasinghesagara; Jennifer Nguyen; Adam Gardner; Michele Martinelli</Authors>
 		<Company>Virtual Photonics Technology Initiative</Company>
@@ -20,11 +20,12 @@
 		<RepositoryType>Git</RepositoryType>
 		<PackageTags>C#;Monte-Carlo</PackageTags>
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-		<Version>6.2.0</Version>
+		<Version>7.0.0</Version>
 	</PropertyGroup>
-
+	
 	<ItemGroup>
-	  <ProjectReference Include="..\Vts.Zemax\Vts.Zemax.csproj" />
+		<ProjectReference Include="..\Vts\Vts.csproj" />
+		<ProjectReference Include="..\Vts.Zemax\Vts.Zemax.csproj" />
 	</ItemGroup>
-
+	
 </Project>
