--- a/src/Vts.MonteCarlo.ZemaxDatabaseConverter.Test/Vts.MonteCarlo.ZemaxDatabaseConverter.Test.csproj
+++ b/src/Vts.MonteCarlo.ZemaxDatabaseConverter.Test/Vts.MonteCarlo.ZemaxDatabaseConverter.Test.csproj
@@ -7,6 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\RayDiffuseReflectanceDatabase" />
+    <None Remove="Resources\RayDiffuseReflectanceDatabase.txt" />
+    <None Remove="Resources\zrdraydatabase\Lightfromsourcefile" />
+    <None Remove="Resources\zrdraydatabase\Lightfromsourcefile.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\mcclraydatabase\RayDiffuseReflectanceDatabase" />
+    <EmbeddedResource Include="Resources\mcclraydatabase\RayDiffuseReflectanceDatabase.txt" />
+    <EmbeddedResource Include="Resources\zrdraydatabase\Lightfromsourcefile" />
+    <EmbeddedResource Include="Resources\zrdraydatabase\Lightfromsourcefile.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
     <PackageReference Include="nunit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1">
@@ -16,7 +30,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Vts.MonteCarlo.CommandLineApplication\Vts.MonteCarlo.CommandLineApplication.csproj" />
     <ProjectReference Include="..\Vts.MonteCarlo.ZemaxDatabaseConverter\Vts.MonteCarlo.ZemaxDatabaseConverter.csproj" />
     <ProjectReference Include="..\Vts\Vts.csproj" />
 	<ProjectReference Include="..\Vts.Zemax\Vts.Zemax.csproj" />
