Add MC examples #1 and #10

--- a/src/Vts.Scripting/Properties/launchSettings.json
+++ b/src/Vts.Scripting/Properties/launchSettings.json
@@ -1,6 +1,9 @@
 {
   "profiles": {
-    "MonteCarloDemo.cs": {
+    "MonteCarlo01ROfRho.cs": {
+      "commandName": "Project"
+    },
+    "MonteCarlo10ROfFx.cs": {
       "commandName": "Project"
     }
   }
