Add some more MC examples

--- a/src/Vts.Scripting/Properties/launchSettings.json
+++ b/src/Vts.Scripting/Properties/launchSettings.json
@@ -3,6 +3,15 @@
     "MonteCarlo01ROfRho.cs": {
       "commandName": "Project"
     },
+    "MonteCarlo02ROfRho.cs": {
+      "commandName": "Project"
+    },
+    "MonteCarlo03ROfRho.cs": {
+      "commandName": "Project"
+    },
+    "MonteCarlo04ROfRho.cs": {
+      "commandName": "Project"
+    },
     "MonteCarlo10ROfFx.cs": {
       "commandName": "Project"
     }
