--- a/src/Vts.Scripting/Vts.Scripting.csproj
+++ b/src/Vts.Scripting/Vts.Scripting.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Plotly.NET" Version="4.1.0" />
     <PackageReference Include="Plotly.NET.CSharp" Version="0.11.1" />
+    <PackageReference Include="Plotly.NET.Interactive" Version="4.2.1" />
     <PackageReference Include="SmallSharp" Version="1.1.7" />
   </ItemGroup>
 
