Small edits for clarity

--- a/src/Vts.Scripting/Vts.Scripting.csproj
+++ b/src/Vts.Scripting/Vts.Scripting.csproj
@@ -15,4 +15,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Vts\Vts.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ShortCourse\" />
+  </ItemGroup>
 </Project>
