--- a/src/Vts.Scripting/Vts.Scripting.csproj
+++ b/src/Vts.Scripting/Vts.Scripting.csproj
@@ -8,15 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.2.1" />
     <PackageReference Include="Plotly.NET.CSharp" Version="0.11.1" />
     <PackageReference Include="Plotly.NET.Interactive" Version="4.2.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Vts\Vts.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ShortCourse\" />
   </ItemGroup>
 </Project>
