Temporary removal of IDemoScript contract

--- a/src/Vts.Scripting/Vts.Scripting.csproj
+++ b/src/Vts.Scripting/Vts.Scripting.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<EnablePreviewFeatures>true</EnablePreviewFeatures>
-    <LangVersion>11</LangVersion>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
