--- a/.github/workflows/deploy-pages-static.yml
+++ b/.github/workflows/deploy-pages-static.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["feature/92-publish-static-web-hosted-documentation-to-github-pages"]
+    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
