--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,14 +1,16 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: .NET Build and Test
 
 on:
   push:
     branches: [ "feature/*" ]
   pull_request:
     branches: [ "master" ]
-
+    paths:
+    - '**.cs'
+    - '**.csproj'
 jobs:
   build:
 
