Fix the SonarCloud issues in MCCL and MCPP

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ src/README.md
 src/Vts.MonteCarlo.CommandLineApplication/Properties/launchSettings.json
 .sonarqube/
 src/Vts/Vts.xml
+src/.github/
