--- a/.github/workflows/dotnetbuildtest.yml
+++ b/.github/workflows/dotnetbuildtest.yml
@@ -24,8 +24,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore src\Vts.sln
+      run: dotnet restore src\\Vts.sln
     - name: Build
-      run: dotnet build src\Vts.sln --no-restore
+      run: dotnet build src\\Vts.sln --no-restore
     - name: Test
-      run: dotnet test src\Vts.sln --no-build --verbosity normal
+      run: dotnet test src\\Vts.sln --no-build --verbosity normal
