--- a/.github/workflows/dotnetbuildtest.yml
+++ b/.github/workflows/dotnetbuildtest.yml
@@ -22,10 +22,10 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore src\\Vts.sln
+      run: dotnet restore src\\VtsLibrary.sln
     - name: Build
-      run: dotnet build src\\Vts.sln --no-restore
+      run: dotnet build src\\VtsLibrary.sln --no-restore
     - name: Test
-      run: dotnet test src\\Vts.sln --no-build --verbosity normal
+      run: dotnet test src\\VtsLibrary.sln --no-build --verbosity normal
